--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/clanskaKarta.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/clanskaKarta.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/StiloviHorizontalniMeni.css"/>
 	</head>
 	<body>
-	 <a href="index.html"><button class="btn povratak">Back</button></a>
+	 <a href="korisnik"><button class="btn povratak">Back</button></a>
 	<img src="/img/background.jpg">
 		<ul>
 	 <li><a href="korisnik/profil" th:text="#{profil}"></a></li>  
