--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/editKorisnika.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/editKorisnika.html
@@ -80,7 +80,7 @@
 		</tr>
 		</table>
 	 	<ul>     
-	 		<li><a href="admin/addTrening" th:text="#{dodajTrening}"></a></li>   
+	 		<li><a href="admin/add" th:text="#{dodajTrening}"></a></li>   
 	 		<li><a href="admin/addTerminTreninga" th:text="#{dodajTerminTreniga}"></a></li>   
 	 		<li><a href="admin/logout" th:text="#{logOut}"></a></li>   
 	 	</ul>
