--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/polaznikProfil.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/polaznikProfil.html
@@ -10,7 +10,7 @@
 	 </head>     
 	 <body>  
 	 
-	 <a href="index.html"><button class="btn povratak">Back</button></a>
+	 <a href="korisnik"><button class="btn povratak">Back</button></a>
 	<img src="/img/background.jpg">
 	  
   
@@ -50,14 +50,11 @@
  			</tr>  
  			<tr th:each="itKorisnik, status: ${korisnik}">  
  			<th th:text="#{datumRodjenja}"></th>
- 			<td><input type="text" th:value="${itKorisnik.datRodjenja}" name="datRodjenja"/></td>
+ 			<td><input type="text" th:value="${itKorisnik.datumRodjenja}" name="datumRodjenja"/></td>
  			</tr>
  			<tr th:each="itKorisnik, status: ${korisnik}">  
  			<th th:text="#{lozinka}"></th>
  			<td><input type="password" th:value="${itKorisnik.lozinka}" name="lozinka"/></td>
- 			</tr>
- 			 <th th:text="#{ponoviteLozinku}"></th>
- 			<td><input type="text" name="lozinkaPonovljena"/></td>
  			</tr>
  			<tr><th></th><td><input type="submit" value="Izmeni"></td></tr>
  			  
