--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/dodajTrening.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/dodajTrening.html
@@ -4,23 +4,20 @@
 
 	<meta charset="UTF-8" />
 
-	<link rel="stylesheet"  type="text/css"  href="css/registracija.css"/>     
-	<link rel="stylesheet" type="text/css" href="css/home.css"/>
-	<link rel="stylesheet" type="text/css" href="css/treninzi.css"/>
+	<link rel="stylesheet"  type="text/css"  href="css/StiloviTabela.css"/>     
+	<link rel="stylesheet" type="text/css" href="css/StiloviForma.css"/>
+	<link rel="stylesheet" type="text/css" href="css/StiloviHorizontalniMeni.css"/>
 	<base href="bURL">
 	<title>Dodaj trening</title>
 </head>
 <body>
-<img class="pozadina" th:src="@{/img/background.jpg}">
- 	<form method="post" action="addTrening">  
-<!--  	 <a href="#" style="padding-right: 30px;"> -->
-<!--         <img th:src="@{/img/korpa.jpg}"> -->
-<!--     </a>   -->
+
+ 	<form method="post" action="addTrening">    
  		<table>   
 	 		<h1 th:text="#{dodajTrening}"></h1></caption>     
- 			<tr><th th:text="#{nazivTreninga}"></th><td><input type="text" value="" name="naziv"/></td></tr>    
- 			<tr><th th:text="#{kratakOpisTreninga}"></th><td><input type="text" value="" name="opis"/></td></tr>   
- 			<tr><th th:text="#{cenaTreninga}"></th><td><input type="text" value="" name="cena" /></td></tr>   
+ 			<tr><th th:text="#{naziv}"></th><td><input type="text" value="" name="naziv"/></td></tr>    
+ 			<tr><th th:text="#{kratakOpis}"></th><td><input type="text" value="" name="kratakOpis"/></td></tr>   
+ 			<tr><th th:text="#{cena}"></th><td><input type="text" value="" name="cena" /></td></tr>   
  			<tr><th th:text="#{trener}"></th><td><input type="text" value="" name="trener" /></td></tr>   
  			<tr><th th:text="#{vrstaTreninga}"></th>
  			<td>
@@ -43,7 +40,7 @@
  			</tr>  
  			<tr><th th:text="#{trajanjeTreninga}"></th><td><input type="number" min="1" name="trajanjeTreninga"/></td></tr>   
  			<tr><th th:text="#{prosecnaOcena}"></th><td><input type="number" min="1" name="prosecnaOcena"/></td></tr>   
- 			<tr><th></th><td><input type="submit" th:value="#{dodajTrening}"/></td>    
+ 			<tr><th></th><td><input type="submit" th:value="#{dodaj}"/></td>    
  		</table>    
  	</form> 
 
