--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/komentari.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/komentari.html
@@ -10,7 +10,7 @@
 	 </head> 
 	 
 <body>
-	<a href="index.html"><button class="btn povratak">Back</button></a>
+	<a href="admin"><button class="btn povratak">Back</button></a>
 	<img src="/img/background.jpg">
 
 	 <li><a href="admin/profil" th:text="#{profil}"></a></li>
@@ -50,8 +50,8 @@
 	 			</td> 
 	 		</table>
 	 			 			 	<ul>     
-	 		<li><a href="admin/addTrening" th:text="#{dodajTrening}"></a></li>   
-	 		<li><a href="admin/addTerminTrening" th:text="#{dodajTermin}"></a></li>   
+	 		<li><a href="admin/add" th:text="#{dodajTrening}"></a></li>   
+	 		<li><a href="admin/addTerminTreninga" th:text="#{dodajTermin}"></a></li>   
 	 		<li><a href="admin/logout" th:text="#{logOut}"></a></li>   
 	 	</ul>
 	
