fixing more bugs

--- a/mojaTeretana/mojaTeretana/src/main/resources/static/css/StiloviHorizontalniMeni.css
+++ b/mojaTeretana/mojaTeretana/src/main/resources/static/css/StiloviHorizontalniMeni.css
@@ -13,6 +13,6 @@ table.horizontalni-meni li {
 	background-color: White;
 }
 table.horizontalni-meni td {
-	background-color: DodgerBlue;
+	background-color: Red;
 }
 
