--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/profil.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/profil.html
@@ -15,7 +15,6 @@
 	 
   
    	<ul>   
-   	<li><a href="admin/profil" th:text="#{profil}"></a></li> 
 	  <li><a href="admin/korisnici" th:text="#{korisnici}"></a></li>  
 	   <li><a href="admin/sale" th:text="#{sale}"></a></li> 
 	   <li><a href="admin/komentari" th:text="#{komentari}"></a></li>
@@ -24,7 +23,9 @@
  	</ul>   
 
            <form method="post" action="admin/profil">
-          
+         
+ 			<table>   
+	 		<h1 th:text="#{profil}"></h1></caption>     
  			<tr th:each="itKorisnik, status: ${korisnik}">
  			<th th:text="#{ime}"></th>
  			<td><input type="text" th:value="${itKorisnik.ime}"  name="ime"></td>
@@ -34,7 +35,7 @@
  			<td><input type="text" th:value="${itKorisnik.prezime}" name="prezime" /></td>
  			</tr>   
  			<tr th:each="itKorisnik, status: ${korisnik}">
- 			<th th:text="#{korisnickoIme}"></th>
+ 			<th th:text="#{username}"></th>
  			<td><input type="text" th:value="${itKorisnik.korisnickoIme}" name="korisnickoIme"/></td>
  			</tr>   
  			<tr th:each="itKorisnik, status: ${korisnik}">
@@ -47,7 +48,7 @@
  			</tr>   
  			<tr th:each="itKorisnik, status: ${korisnik}">
  			<th th:text="#{brojTelefona}"></th>
- 			<td><input type="text" th:value="${itKorisnik.brojTelefona}" name="brojTelefona"/></td>
+ 			<td><input type="text" th:value="${itKorisnik.brojTelefona}" name="telefon"/></td>
  			</tr>  
  			<tr th:each="itKorisnik, status: ${korisnik}">  
  			<th th:text="#{datumRodjenja}"></th>
@@ -57,6 +58,7 @@
  			<th th:text="#{lozinka}"></th>
  			<td><input type="password" th:value="${itKorisnik.lozinka}" name="lozinka"/></td>
  			</tr>
+ 		
  			<tr><th></th><td><input type="submit" th:value="izmeni"></td></tr>
  			  
  		</table>   
