--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/clanskaKarta.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/clanskaKarta.html
@@ -27,11 +27,11 @@
 	 			<h1 th:text="#{clanskaKarta}"></h1></caption>    
 	 			<tr>      
 	 			    <th  th:text="#{popust}"></th> 
-	 				<th  th:text="#{poeni}"></th>    	
+	 				<th  th:text="#{brojPoena}"></th>    	
 	 			</tr>
-	 			<tr  th:each="itClanska, status: ${clanska}">  
+	 			<tr  th:each="itClanska, status: ${clanskaKarta}">  
 	 			<td th:text="${itClanska.popust}+'%'" name="popust"></td>  
-	 			<td th:text="${itClanska.poeni}" name="poeni"></td> 
+	 			<td th:text="${itClanska.brojPoena}" name="brojPoena"></td> 
 	 		</table>
 	 		
 	 	<li><a href="korisnik/logout" th:text="#{logOut}"></a></li>   
