--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/dodajTerminTreninga.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/dodajTerminTreninga.html
@@ -22,7 +22,7 @@
 	             <li><a href="sale" th:text="#{sale}"></a></li> 
 	             <li><a href="komentari" th:text="#{komentari}"></a></li>
 	             <li><a href="clanskeKarte" th:text="#{clanskeKarte}"></a></li>
-				<h1 th:text="#{termini}"></h1></caption>  
+				<h1 th:text="#{terminTreninga}"></h1>  
 				
 	   
 				<tr>
@@ -45,8 +45,7 @@
 				<th th:text="#{datumIVremeTermina}"></th> 
 
 					<td>
-						<input type="date" th:value="2020-04-01" name="datum"/>&nbsp;
-						<input type="time" value="18:00" name="vreme"/>
+						<input type="date" th:value="13.09.2022." name="datum"/>&nbsp;
 					</td>
 				<tr>
 				
