--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/editKorisnika.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/editKorisnika.html
@@ -10,7 +10,7 @@
 	 </head> 
 <body>
 
-	<a href="index.html"><button class="btn povratak">Back</button></a>
+	<a href="admin"><button class="btn povratak">Back</button></a>
 	<img src="/img/background.jpg">
 
 	<form method="post" action="admin/edit">
