--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/korpe.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/korpe.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/home.css"/>
 	</head>
 	<body>
-	<a href="index.html"><button class="btn povratak">Back</button></a>
+	<a href="admin"><button class="btn povratak">Back</button></a>
 	<img src="/img/background.jpg">
 
 	
@@ -39,7 +39,7 @@
  				<td th:text="${itKorpa.terminId.treningId.trener}"></td>   
  				<td th:text="${itKorpa.terminId.treningId.cena}"></td>    
  				<td th:text="${itKorpa.terminId.salaId.Id}"></td>   
- 				<td th:text="${#temporals.format(itKorpa.terminId.datum,'dd-MM-yyyy HH:mm')}"></td>  
+ 				<td th:text="${#temporals.format(itKorpa.terminId.datumTermina,'dd-MM-yyyy HH:mm')}"></td>  
 		</tr>
 		</table>
 	</body>
